Migrate to Java 25 / SpringBoot 4. (#4)
The following has been done:
-update all dependencies and use Java 25
-use Jackson 3 except for OpenAPI
-rename mappers for consistency
-rely on general rules for JSON mapping
-use the new RestTestClient in tests
-improve controllers testing API
-update devcontainer for Java 25
-update GitHub actions for Java 25